--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+
 body,
 html {
   /* height:100%; */
@@ -5,3 +6,60 @@ html {
   margin: 0px;
   padding: 0px;
 }
+
+#app {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 2fr 1 fr;
+}
+
+#app header {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+header h1 {
+  grid-column: 1;
+  display: grid;
+}
+
+header ul {
+  grid-column: 2;
+  display: grid;
+  grid-template-rows: repeat(4,1fr);
+}
+
+#app main {
+  display: grid;
+  margin: 10px;
+  grid-template-columns: repeat(4,1fr);
+  grid-template-rows: repeat(3, 1fr);
+}
+
+main .store-item{
+  display: grid;
+  border: 2px solid black;
+  grid-template-rows: 1fr .5fr .25fr;
+}
+
+.store-item img {
+  grid-row: 1;
+  grid-column: 1/4;
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+  background: green;
+}
+
+.store-item p {
+  grid-row: 2;
+  border: 2px solid red;
+}
+
+.store-item span {
+  grid-row: 3;
+  border: 2px solid blue;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
