--- a/main.css
+++ b/main.css
@@ -4,62 +4,102 @@ html {
   /* height:100%; */
 
   margin: 0px;
-  padding: 0px;
+  padding: 5px;
+  background: gray;
 }
 
 #app {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 2fr 1 fr;
+  grid-template-rows: 80px 1fr 60px;
 }
 
 #app header {
+  grid-row: 1;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 2fr;
+  align-items: center;
 }
 
 header h1 {
   grid-column: 1;
-  display: grid;
+  text-align: center;
 }
 
 header ul {
   grid-column: 2;
-  display: grid;
-  grid-template-rows: repeat(4,1fr);
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  justify-content: flex-end;
+
 }
 
 #app main {
+  grid-row: 2;
   display: grid;
-  margin: 10px;
   grid-template-columns: repeat(4,1fr);
-  grid-template-rows: repeat(3, 1fr);
+  gap: 10px;
 }
 
 main .store-item{
   display: grid;
-  border: 2px solid black;
-  grid-template-rows: 1fr .5fr .25fr;
+  border: 5px double black;
+  background: white;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto auto auto auto;
+  grid-template-areas:
+  "img img img"
+  "title title title"
+  "desc desc desc"
+  "span1 span2 span3";
 }
 
 .store-item img {
-  grid-row: 1;
-  grid-column: 1/4;
+  grid-area: img;
   width: 100%;
-  height: auto;
+  aspect-ratio: 1/1;
   object-fit: contain;
-  background: green;
+  justify-self: center;
+  text-align: center;
+  padding: 10px;
 }
 
-.store-item p {
-  grid-row: 2;
-  border: 2px solid red;
+.store-item p:first-of-type {
+  grid-area: title;
+  height: fit-content;
+  margin-block-end: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
-.store-item span {
+.store-item p:last-of-type {
+  grid-area: desc;
+  height: fit-content;
+  margin-block-start: 0;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.store-item span:nth-child(4) {
+  grid-area: span1;
+  padding-left: 10px;
+  padding-bottom: 5px;
+}
+
+.store-item span:nth-child(5) {
+  grid-area: span2;
+  padding-bottom: 5px;
+}
+
+.store-item span:nth-child(6) {
+  grid-area: span3;
+  padding-right: 10px;
+  padding-bottom: 5px;
+}
+
+#app footer{
   grid-row: 3;
-  border: 2px solid blue;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  justify-self: center;
+  text-align: center;
 }
-
